Fixed overflow layout

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -57,7 +57,7 @@
     top: 0;
   }
   .container {
-    padding: 1rem;
+    position: relative;
   }
 
   .nav-container {
@@ -81,7 +81,6 @@
     top: 0;
   }
   .container {
-    padding: 1rem;
   }
 
   .nav-container {
@@ -107,7 +106,7 @@
     top: 0;
   }
   .container {
-    padding: 1rem;
+    position: relative;
   }
 
   .nav-container {
@@ -131,7 +130,7 @@
     top: 0;
   }
   .container {
-    padding: 1rem;
+    position: relative;
   }
 
   .nav-container {
@@ -155,7 +154,7 @@
     top: 0;
   }
   .container {
-    padding: 1rem;
+    position: relative;
   }
 
   .nav-container {
@@ -173,13 +172,12 @@
   header {
     position: fixed;
     padding-block: 2rem;
-    width: 100%;
     z-index: 50;
-    background-color: white;
+    background-color: rebeccapurple;
     top: 0;
   }
   .container {
-    padding: 1rem;
+    position: relative;
   }
 
   .nav-container {
