--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
@@ -19,7 +23,6 @@ body {
 .container {
   max-width: 1580px;
   margin: 0 auto;
-  padding-inline: 4rem;
 }
 
 a {
